# PolymarketShowcase

./: .gitignore  index.html  package.json  tsconfig.json
.github/workflows/: deploy.yml
backend/: README.md  pyproject.toml
backend/src/polymarket_backend/: main.py  wallet.py
frontend/: package-lock.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: PolymarketPage.tsx
frontend/src/components/ui/: visx-line-chart.tsx
src/components/: PolymarketPage.tsx
src/components/ui/: visx-line-chart.tsx
