[project]
name = "polymarket-backend"
version = "0.1.0"
description = "Standalone Polymarket wallet backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "requests>=2.32.0"
]

[project.optional-dependencies]
dev = ["python-dotenv>=1.0.0"]
